# homoiconic_experiment

./: CMakeLists.txt  LICENSE  README.md
src/: ast.hpp  executable_module.hpp  function.hpp  llvm_ext.hpp  main.cpp  source.hpp
test_sources/: if.rq  lorem.rq  main.rq  return.rq
